fix bug: the font in cart slider is too large

--- a/public/mine/styles/sass/cart.scss
+++ b/public/mine/styles/sass/cart.scss
@@ -46,8 +46,8 @@ body {
     padding: 10px 0;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 
-    .mui-slider-right a.mui-btn {
-      font-size: 14px;
+    .mui-slider-right a.mui-btn{
+      font-size: 14px !important;
     }
 
     .product-box {
